Fixed an overflow issue with the visual word gallery which caused horizontal scrolling

--- a/client/musebag/css/style.css
+++ b/client/musebag/css/style.css
@@ -882,6 +882,7 @@ nav a img {
 	text-align: center;
 	margin: 4px;
 	padding: 10px;
+	overflow-x: hidden;
 }
 
 .over {
